<resources>
    <string name="app_name">Hitung Luas Bangun Datar</string>
    <string name="persegi">Persegi</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="lingkaran">Lingkaran</string>
    <string name="segitiga">Segitiga</string>
    <string name="ukuran_1">ukuran 1 :</string>
    <string name="ukuran_2">ukuran 2 :</string>
    <string name="sisi_1_label">Sisi 1: %s</string>
    <string name="sisi_2_label">Sisi 2: %s</string>
    <string name="hasil_label">Hasil: %s</string>
    <string name="hitung">Hitung</string>
    <string name="lihat_rumus">lihat rumus</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Aplikasi Bangun Datar merupakan sebuah aplikasi Android untuk menghitung luas dan keliling beberapa bangun datar seperti persegi, persegi panjang, lingkaran, dan segitiga. Aplikasi ini memberikan kemudahanbagi pengguna untuk menghitung parameter-parameter tersebut dengan mudah dan cepat.Aplikasi ini dibuat untuk kelas
Mobpro 1. Temukan kodenya di https://github.com/Rimunanda-15/Assessment-01-MobPro.git © 2023 Rimunanda-15.\nAll rights reserved.

    </string>
    <string name="lihat_rumus_diwebsite">lihat rumus di website</string>
    <string name="histori">histori</string>
    <string name="delete_confirmation_title">"Hapus Data "</string>
    <string name="delete_confirmation_message">data berhasil dihapus</string>
    <string name="delete">hapus</string>
</resources>