<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/pembuka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selamat datang di aplikasi kami!\nSilakan isi Luas bangun datar yang ingin anda cari "
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/jenisBangunDatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Pilih Jenis Bangun Datar:"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pembuka" />

    <RadioGroup
        android:id="@+id/jenis_bangun_datar_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/jenisBangunDatar"
        app:layout_constraintTop_toBottomOf="@id/jenisBangunDatar">

        <RadioButton
            android:id="@+id/persegi_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persegi" />

        <RadioButton
            android:id="@+id/persegi_panjang_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persegi_panjang" />

        <RadioButton
            android:id="@+id/lingkaran_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lingkaran" />

        <RadioButton
            android:id="@+id/segitiga_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/segitiga" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ukuran1_hint"
        android:layout_width="match_parent"
        style="?attr/textInputFilledStyle"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jenis_bangun_datar_radio_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ukuran1_inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/ukuran_1" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ukuran2_hint"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ukuran1_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ukuran2_inp"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/ukuran_2" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/hasil_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Hasil:"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/ukuran1_hint"
        app:layout_constraintTop_toBottomOf="@+id/ukuran2_hint" />

    <TextView
        android:id="@+id/luas_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/hasil_text_view"
        app:layout_constraintTop_toTopOf="@+id/hasil_text_view" />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/hitung_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Hitung"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hasil_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>